Update Video.js .html

--- a/pages/Video.js .html
+++ b/pages/Video.js .html
@@ -18,6 +18,16 @@
 	    	<a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
 	  	</p>
 	</video>
+	<br>
+	<video id="my-video" class="video-js" controls preload="auto" width="640" height="264"
+	poster="https://raw.githubusercontent.com/xgqfrms-GitHub/webgeeker/gh-pages/images/poster/mesai.png" data-setup="{}">
+	    <source src="https://vimeo-prod-src-std-asia.storage.googleapis.com/videos/597149302?GoogleAccessId=GOOGHOVZWCHVINHSLPGA&Expires=1473585042&Signature=gsP%2FxS3zYRAu1qvkbj4qT2GabLs%3D" type='video/mp4'>
+	    <source src="MY_VIDEO.webm" type='video/webm'>
+	    <p class="vjs-no-js">
+	    	To view this video please enable JavaScript, and consider upgrading to a web browser that
+	    	<a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+	  	</p>
+	</video>
 	<script src="http://vjs.zencdn.net/5.8.8/video.js"></script>
 </body>
 </html>
