--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 					<h1>Hello, World!</h1>
 					<p>
 						This is a BootStrap website!
+						<a href="./pages/Video.js .html">Video.js</a>
 					</p>
 				</div>
 				<div class="row">
