--- a/index.html
+++ b/index.html
@@ -88,11 +88,13 @@
 				</div>
 				<div class="row">
 					<div class="col-sm-6">
-						<h1>h1</h1>
+						<h1>html5-loading</h1>
+						<a href="./pages/html5-loading.html">Video.js</a>
 						<p>xxxxxxxxxxxx</p>
 					</div>
 					<div class="col-sm-6">
-						<h1>h1</h1>
+						<h1>Video.js</h1>
+						<a href="./pages/Video.js .html">Video.js</a>
 						<p>yyyyyyyyyyyyy</p>
 					</div>
 					<div class="col-sm-6">
