--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>webgeeker</title>
-	 <link rel="shortcut icon" href="images/logo/webgeeker.png" type="image/png">
+	 <link rel="shortcut icon" href="./images/logo/webgeeker.png" type="image/png">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">
 	<link rel="stylesheet" href="http://cdn.xgqfrms.xyz/bootstrap/3.3.7/css/bootstrap.min.css">
