--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>webgeeker</title>
-	 <link rel="shortcut icon" href="./images/logo/webgeeker.png" type="image/png">
+	 <link rel="shortcut icon" href="./images/logo/logo.png" type="image/png">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">
 	<link rel="stylesheet" href="http://cdn.xgqfrms.xyz/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -83,18 +83,18 @@
 					<h1>Hello, World!</h1>
 					<p>
 						This is a BootStrap website!
-						<a href="./pages/Video.js .html">Video.js</a>
+						<a href="./pages/Video.js .html" target="_blank">Video.js</a>
 					</p>
 				</div>
 				<div class="row">
 					<div class="col-sm-6">
 						<h1>html5-loading</h1>
-						<a href="./pages/html5-loading.html">Video.js</a>
+						<a href="./pages/html5-loading.html" target="_blank">Video.js</a>
 						<p>xxxxxxxxxxxx</p>
 					</div>
 					<div class="col-sm-6">
 						<h1>Video.js</h1>
-						<a href="./pages/Video.js .html">Video.js</a>
+						<a href="./pages/Video.js .html" target="_blank">Video.js</a>
 						<p>yyyyyyyyyyyyy</p>
 					</div>
 					<div class="col-sm-6">
