--- a/index.html
+++ b/index.html
@@ -2,145 +2,135 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>webgeeker</title>
-	 <link rel="shortcut icon" href="./images/logo/logo.png" type="image/png">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">
-	<link rel="stylesheet" href="http://cdn.xgqfrms.xyz/bootstrap/3.3.7/css/bootstrap.min.css">
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="apple-mobile-web-app-title" content="Web Geeker">
+	<meta name="applicable-device" content="pc,mobile">
+	<meta http-equiv="Cache-Control" content="no-transform"/>
+	<meta http-equiv="Cache-Control" content="no-siteapp"/>
+	<!-- SEO -->
+	<meta name="description" content="Web Geeker: Focus on the full-stack of web technology sharing, open Tutorial website"/>
+	<meta name="robots" content="noodp"/>
+	<meta property="og:locale" content="en_US"/>
+	<meta property="og:type" content="website"/>
+	<meta property="og:title" content="Web Geeker: Focus on the full-stack of web technology sharing, open Tutorial website"/>
+	<meta property="og:description" content="Web Geeker: Focus on the full-stack of web technology sharing, open Tutorial website"/>
+	<meta property="og:url" content="http://www.webgeeker.xyz/"/>
+	<meta property="og:site_name" content="webgeeker"/>
+	<!-- twitter -->
+	<meta name="twitter:card" content="summary_large_image"/>
+	<meta name="twitter:description" content="Web Geeker: Focus on the full-stack of web technology sharing, open Tutorial website"/>
+	<meta name="twitter:title" content="Web Geeker: Focus on the full-stack of web technology sharing, open Tutorial website"/>
+	<meta name="twitter:site" content="@webgeeker"/>
+	<!-- Windows Start Screen tile for your site: http://www.buildmypinnedsite.com/ -->
+	<meta name="application-name" content="webgeeker"/>
+	<meta name="msapplication-square70x70logo" content="./images/win-tiles/small.jpg"/>
+	<meta name="msapplication-square150x150logo" content="./images/win-tiles/medium.jpg"/>
+	<meta name="msapplication-wide310x150logo" content="./images/win-tiles/wide.jpg"/>
+	<meta name="msapplication-square310x310logo" content="./images/win-tiles/large.jpg"/>
+	<meta name="msapplication-TileColor" content="#00ff00"/>
+	<meta name="msapplication-notification" content="frequency=30;polling-uri=http://notifications.buildmypinnedsite.com/?feed=http://www.webgeeker.xyz/rss.xml&amp;id=1;polling-uri2=http://notifications.buildmypinnedsite.com/?feed=http://www.webgeeker.xyz/rss.xml&amp;id=2;polling-uri3=http://notifications.buildmypinnedsite.com/?feed=http://www.webgeeker.xyz/rss.xml&amp;id=3;polling-uri4=http://notifications.buildmypinnedsite.com/?feed=http://www.webgeeker.xyz/rss.xml&amp;id=4;polling-uri5=http://notifications.buildmypinnedsite.com/?feed=http://www.webgeeker.xyz/rss.xml&amp;id=5; cycle=1"/>
+	<!-- links -->
+	<link rel="canonical" href="http://www.webgeeker.xyz/"/>
+	<link rel="next" href="http://www.webgeeker.xyz/pages/next.html"/>
+	<link rel="stylesheet" href="">
+	<title>Web Geeker: Focus on the full-stack of web technology sharing, open Tutorial website</title>
 	<style>
 		/*
-		 * Style tweaks
-		 * --------------------------------------------------
-		 */
-		html,
-		body {
-		  overflow-x: hidden; /* Prevent scroll on narrow devices */
+			Sass.scss (gulp) 
+			http://cdn.xgqfrms.xyz/css/common.css
+		*/
+		$ g_color = #0f0;
+		*{
+			background: rgba(0,0,0,0.7);
+			color: rgba(0,255,0,0.7);
+			box-sizing: border-box;
+			margin: 100px auto;
+			justify-content: center;
+			align-content: center;
 		}
-		body {
-		  padding-top: 70px;
+		/* media quire*/
+		@media all and (max-width: 360px) {
+			/**/			
 		}
-		footer {
-		  padding: 30px 0;
+		/*web-fonts*/
+		@font-face{
+			font-family: 'FontAwesome';
+			src: url('../font/fontawesome-webfont.wolf?v=4.40'),
+					('../font/fontawesome-webfont.eot?v=4.40'),
+					('../font/fontawesome-webfont.ttf?v=4.40'),
+					('../font/fontawesome-webfont.svg?v=4.40')
+			;
+			font-style: normal;
+			font-weight: normal;
 		}
-
-		/*
-		 * Off Canvas
-		 * --------------------------------------------------
-		 */
-		@media screen and (max-width: 767px) {
-		  .row-offcanvas {
-		    position: relative;
-		    -webkit-transition: all .25s ease-out;
-		         -o-transition: all .25s ease-out;
-		            transition: all .25s ease-out;
-		  }
-
-		  .row-offcanvas-right {
-		    right: 0;
-		  }
-
-		  .row-offcanvas-left {
-		    left: 0;
-		  }
-
-		  .row-offcanvas-right .sidebar-offcanvas {
-		    right: -50%; /* 6 columns */
-		  }
-
-		  .row-offcanvas-left .sidebar-offcanvas {
-		    left: -50%; /* 6 columns */
-		  }
-
-		  .row-offcanvas-right.active {
-		    right: 50%; /* 6 columns */
-		  }
-
-		  .row-offcanvas-left.active {
-		    left: 50%; /* 6 columns */
-		  }
-
-		  .sidebar-offcanvas {
-		    position: absolute;
-		    top: 0;
-		    width: 50%; /* 6 columns */
-		  }
+		/*browser support check*/
+		@supports not(display:flex){
+			div{
+				float: right;
+			}
 		}
 	</style>
 </head>
 <body>
-	<div>
-		<!--  -->
-	</div>
-	<div class="container">
-		<div class="row row-offcanvas row-offcanvas-right">
-			<div class="col-sm-9">
-				<p class="pull-right visible-xs">
-					<button class="btn-xs btn btn-primary" data-toggle="offcanvas">
-						Toggle
-					</button>
-				</p>
-				<div class="jumbotron">
-					<h1>Hello, World!</h1>
-					<p>
-						This is a BootStrap website!
-						<a href="./pages/Video.js .html" target="_blank">Video.js</a>
-					</p>
-				</div>
-				<div class="row">
-					<div class="col-sm-6">
-						<h1>html5-loading</h1>
-						<a href="./pages/html5-loading.html" target="_blank">Video.js</a>
-						<p>xxxxxxxxxxxx</p>
-					</div>
-					<div class="col-sm-6">
-						<h1>Video.js</h1>
-						<a href="./pages/Video.js .html" target="_blank">Video.js</a>
-						<p>yyyyyyyyyyyyy</p>
-					</div>
-					<div class="col-sm-6">
-						<h1>h1</h1>
-						<p>zzzzzzzzzzzzz</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-sm-3 sidebar-offcanvas" id="sidebar">
-				<ul class="list-group" class="collapse" id="clinks">
-					<li class="list-group-item">link</li>
-					<li class="list-group-item">link</li>
-					<li class="list-group-item">link</li>
-				</ul>
+	<header class="h5-header">
+		<div class="container">
+			<div class="row">
+				<!-- bootstrapp -->
 			</div>
 		</div>
-	</div>
-	<!-- js -->
-	<script src="http://cdn.xgqfrms.xyz/jquery/jquery-3.1.0.min.js"></script>
-	<script src="http://cdn.xgqfrms.xyz/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script>
-		$(document).ready(function () {
-		  $('[data-toggle="offcanvas"]').click(function () {
-		    $('.row-offcanvas').toggleClass('active')
-		  });
-		});
-	</script>
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-	  ga('create', 'UA-84006539-1', 'auto');
-	  ga('send', 'pageview');
-	</script>
-	<!-- Full-Stack-WebApp -->
-	<script>
-	var _rollbarConfig = {
-	    accessToken: "bf00204244ea4152ae546e635149faac",
-	   captureUncaught: true,
-	   payload: {
-	       environment: "test"
-	   }
-	};
-	!function(r){function e(t){if(o[t])return o[t].exports;var n=o[t]={exports:{},id:t,loaded:!1};return r[t].call(n.exports,n,n.exports,e),n.loaded=!0,n.exports}var o={};return e.m=r,e.c=o,e.p="",e(0)}([function(r,e,o){"use strict";var t=o(1).Rollbar,n=o(2);_rollbarConfig.rollbarJsUrl=_rollbarConfig.rollbarJsUrl||"https://d37gvrvc0wt4s1.cloudfront.net/js/v1.9/rollbar.min.js";var a=t.init(window,_rollbarConfig),i=n(a,_rollbarConfig);a.loadFull(window,document,!_rollbarConfig.async,_rollbarConfig,i)},function(r,e){"use strict";function o(r){return function(){try{return r.apply(this,arguments)}catch(e){try{console.error("[Rollbar]: Internal error",e)}catch(o){}}}}function t(r,e,o){window._rollbarWrappedError&&(o[4]||(o[4]=window._rollbarWrappedError),o[5]||(o[5]=window._rollbarWrappedError._rollbarContext),window._rollbarWrappedError=null),r.uncaughtError.apply(r,o),e&&e.apply(window,o)}function n(r){var e=function(){var e=Array.prototype.slice.call(arguments,0);t(r,r._rollbarOldOnError,e)};return e.belongsToShim=!0,e}function a(r){this.shimId=++c,this.notifier=null,this.parentShim=r,this._rollbarOldOnError=null}function i(r){var e=a;return o(function(){if(this.notifier)return this.notifier[r].apply(this.notifier,arguments);var o=this,t="scope"===r;t&&(o=new e(this));var n=Array.prototype.slice.call(arguments,0),a={shim:o,method:r,args:n,ts:new Date};return window._rollbarShimQueue.push(a),t?o:void 0})}function l(r,e){if(e.hasOwnProperty&&e.hasOwnProperty("addEventListener")){var o=e.addEventListener;e.addEventListener=function(e,t,n){o.call(this,e,r.wrap(t),n)};var t=e.removeEventListener;e.removeEventListener=function(r,e,o){t.call(this,r,e&&e._wrapped?e._wrapped:e,o)}}}var c=0;a.init=function(r,e){var t=e.globalAlias||"Rollbar";if("object"==typeof r[t])return r[t];r._rollbarShimQueue=[],r._rollbarWrappedError=null,e=e||{};var i=new a;return o(function(){if(i.configure(e),e.captureUncaught){i._rollbarOldOnError=r.onerror,r.onerror=n(i);var o,a,c="EventTarget,Window,Node,ApplicationCache,AudioTrackList,ChannelMergerNode,CryptoOperation,EventSource,FileReader,HTMLUnknownElement,IDBDatabase,IDBRequest,IDBTransaction,KeyOperation,MediaController,MessagePort,ModalWindow,Notification,SVGElementInstance,Screen,TextTrack,TextTrackCue,TextTrackList,WebSocket,WebSocketWorker,Worker,XMLHttpRequest,XMLHttpRequestEventTarget,XMLHttpRequestUpload".split(",");for(o=0;o<c.length;++o)a=c[o],r[a]&&r[a].prototype&&l(i,r[a].prototype)}return e.captureUnhandledRejections&&(i._unhandledRejectionHandler=function(r){var e=r.reason,o=r.promise,t=r.detail;!e&&t&&(e=t.reason,o=t.promise),i.unhandledRejection(e,o)},r.addEventListener("unhandledrejection",i._unhandledRejectionHandler)),r[t]=i,i})()},a.prototype.loadFull=function(r,e,t,n,a){var i=function(){var e;if(void 0===r._rollbarPayloadQueue){var o,t,n,i;for(e=new Error("rollbar.js did not load");o=r._rollbarShimQueue.shift();)for(n=o.args,i=0;i<n.length;++i)if(t=n[i],"function"==typeof t){t(e);break}}"function"==typeof a&&a(e)},l=!1,c=e.createElement("script"),d=e.getElementsByTagName("script")[0],p=d.parentNode;c.crossOrigin="",c.src=n.rollbarJsUrl,c.async=!t,c.onload=c.onreadystatechange=o(function(){if(!(l||this.readyState&&"loaded"!==this.readyState&&"complete"!==this.readyState)){c.onload=c.onreadystatechange=null;try{p.removeChild(c)}catch(r){}l=!0,i()}}),p.insertBefore(c,d)},a.prototype.wrap=function(r,e){try{var o;if(o="function"==typeof e?e:function(){return e||{}},"function"!=typeof r)return r;if(r._isWrap)return r;if(!r._wrapped){r._wrapped=function(){try{return r.apply(this,arguments)}catch(e){throw e._rollbarContext=o()||{},e._rollbarContext._wrappedSource=r.toString(),window._rollbarWrappedError=e,e}},r._wrapped._isWrap=!0;for(var t in r)r.hasOwnProperty(t)&&(r._wrapped[t]=r[t])}return r._wrapped}catch(n){return r}};for(var d="log,debug,info,warn,warning,error,critical,global,configure,scope,uncaughtError,unhandledRejection".split(","),p=0;p<d.length;++p)a.prototype[d[p]]=i(d[p]);r.exports={Rollbar:a,_rollbarWindowOnError:t}},function(r,e){"use strict";r.exports=function(r,e){return function(o){if(!o&&!window._rollbarInitialized){var t=window.RollbarNotifier,n=e||{},a=n.globalAlias||"Rollbar",i=window.Rollbar.init(n,r);i._processShimQueue(window._rollbarShimQueue||[]),window[a]=i,window._rollbarInitialized=!0,t.processPayloads()}}}}]);
-	</script>
-	<!-- https://rollbar.com/Xray/Full-Stack-WebApp/ -->
+	</header>
+	<nav class="h5-nav">
+		<div>
+			<ul>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+		</div>
+	</nav>
+	<sidebar class="h5-sidebar">
+		<div>
+			<div>
+				<label for="">Country</label><br>
+				<input type="text" list="countris" placeholder="select your contry" >
+				<datalist id="countris">
+					<option value="China"></option>
+					<option value="USA"></option>
+					<option value="UK"></option>
+					<option value="Korea"></option>
+					<option value="Italy"></option>
+					<option value="France"></option>
+					<option value="Germany"></option>
+				</datalist>
+				<label for="">editable</label>
+				<input type="text">
+			</div>
+		</div>
+	</sidebar>
+	<article class="h5-article">
+		<div></div>
+		<section class="h5-section">
+			<div></div>
+		</section>
+	</article>
+	<footer class="h5-footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6">
+					<address>
+						Written by <a href="mailto:webgeeker@webgeeker.xyz">xgqfrms</a>.<br/>
+						Visit us at: <span>www.xgqfrms.xyz</span><br>
+						Box 888, Pu Dong New District<br>
+					</address>
+				</div>
+			</div>
+		</div>
+	</footer>
+	<!--  -->
 </body>
 </html>
