--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
 	<meta name="msapplication-square310x310logo" content="./images/win-tiles/large.jpg"/>
 	<meta name="msapplication-TileColor" content="#00ff00"/>
 	<meta name="msapplication-notification" content="frequency=30;polling-uri=http://notifications.buildmypinnedsite.com/?feed=http://www.webgeeker.xyz/rss.xml&amp;id=1;polling-uri2=http://notifications.buildmypinnedsite.com/?feed=http://www.webgeeker.xyz/rss.xml&amp;id=2;polling-uri3=http://notifications.buildmypinnedsite.com/?feed=http://www.webgeeker.xyz/rss.xml&amp;id=3;polling-uri4=http://notifications.buildmypinnedsite.com/?feed=http://www.webgeeker.xyz/rss.xml&amp;id=4;polling-uri5=http://notifications.buildmypinnedsite.com/?feed=http://www.webgeeker.xyz/rss.xml&amp;id=5; cycle=1"/>
+	<!-- SEO meta -->
+	<meta name="author" content="xgqfrms, webgeeker">
+	<meta name=generator content="Sublime Text 3">
+	<meta name="keywords" content="webgeeker,xgqfrms,xyz,github,free,web,site,www.webgeeker.xyz,">
+	<meta name="description" content=webgeeker: Focus on the full-stack of web technology sharing, open Tutorial website! published on www.webgeeker.xyz">
+	<meta name="application-name" content="Web Geeker: www.webgeeker.xyz">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+	<link rel="shortcut icon" href="https://raw.githubusercontent.com/xgqfrms-GitHub/webgeeker/gh-pages/images/logo/logo.png" type="image/png">
+	<link rel="author" type="text/plain" href="http://www.webgeeker.xyz/humans.txt" />
 	<!-- links -->
 	<link rel="canonical" href="http://www.webgeeker.xyz/"/>
 	<link rel="next" href="http://www.webgeeker.xyz/pages/next.html"/>
