--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 	<nav class="h5-nav">
 		<div>
 			<ul>
-				<li></li>
+				<li><a href="./GitHub-Markdown-Test.html" target="_blank">GitHub-Markdown-Test.html</a></li>
 				<li></li>
 				<li></li>
 				<li></li>
