--- a/Highcharts/jsfiddle-highslide-demo.html
+++ b/Highcharts/jsfiddle-highslide-demo.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 	<div>
+		<h1>Highcharts 免费版仅供给个人学习、个人网站和非商业用途使用!</h1>
 		<div id="container" class="hc"></div>
 	</div>
 	<!-- jquery -->
