--- a/job/meeting/meeting.html
+++ b/job/meeting/meeting.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>meeting</title>
+	<title>notice</title>
 
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 	<meta name="format-detection" content="telephone=no" />
@@ -17,7 +16,7 @@
 
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-	<link rel="stylesheet" href="./meeting.css">
+	<link rel="stylesheet" href="meeting.css">
 </head>
 <body>
 	<div class="h-box">
@@ -37,7 +36,7 @@
 		<div class="wb">
 			<span class="sh">主题: 公告内容点击右侧可查看详情萨达请...</span>
 			<p>主办单位: 上海友谊通信服务有限公司</p>
-			<img src="./img/hy.png" alt="会议">
+			<img src="../assets/hy.png" alt="会议">
 			<span class="st">2016-08-12 19:30</span>
 		</div>
 		<div class="wc">
@@ -55,7 +54,7 @@
 		<div class="wb">
 			<span class="sh">主题: 公告内容点击右侧可查看详情萨达请...</span>
 			<p>主办单位: 上海友谊通信服务有限公司</p>
-			<img src="./img/hy.png" alt="会议">
+			<img src="../assets/hy.png" alt="会议">
 			<span class="st">2016-08-12 19:30</span>
 		</div>
 		<div class="wc">
@@ -73,7 +72,7 @@
 		<div class="wb">
 			<span class="sh">主题: 公告内容点击右侧可查看详情萨达请...</span>
 			<p>主办单位: 上海友谊通信服务有限公司</p>
-			<img src="./img/hy.png" alt="会议">
+			<img src="../assets/hy.png" alt="会议">
 			<span class="st">2016-08-12 19:30</span>
 		</div>
 		<div class="wc">
