--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
 	<meta name="author" content="xgqfrms, webgeeker">
 	<meta name=generator content="Sublime Text 3">
 	<meta name="keywords" content="webgeeker,xgqfrms,xyz,github,free,web,site,www.webgeeker.xyz,">
-	<meta name="description" content=webgeeker: Focus on the full-stack of web technology sharing, open Tutorial website! published on www.webgeeker.xyz">
+	<meta name="description" content="webgeeker: Focus on the full-stack of web technology sharing, open Tutorial website! published on www.webgeeker.xyz"/>
+	<!-- 预呈现和预提取支持:https://msdn.microsoft.com/library/dn265039(v=vs.85).aspx -->
+  <link rel="prerender" href="http://www.webgeeker.xyz/index.html" />
+  <link rel="prefetch" href="http://www.webgeeker.xyz/css/style.css" />
+  <link rel="dns-prefetch" href="http://www.webgeeker.xyz/"/>
 	<meta name="application-name" content="Web Geeker: www.webgeeker.xyz">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
