--- a/index.html
+++ b/index.html
@@ -47,42 +47,11 @@
 	<!-- links -->
 	<link rel="canonical" href="http://www.webgeeker.xyz/"/>
 	<link rel="next" href="http://www.webgeeker.xyz/pages/next.html"/>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="./css/style.css">
 	<title>Web Geeker: Focus on the full-stack of web technology sharing, open Tutorial website</title>
 	<style>
-		/*
-			Sass.scss (gulp) 
-			http://cdn.xgqfrms.xyz/css/common.css
-		*/
-		$ g_color = #0f0;
-		*{
-			background: rgba(0,0,0,0.7);
-			color: rgba(0,255,0,0.7);
-			box-sizing: border-box;
-			margin: 100px auto;
-			justify-content: center;
-			align-content: center;
-		}
-		/* media quire*/
-		@media all and (max-width: 360px) {
-			/**/			
-		}
-		/*web-fonts*/
-		@font-face{
-			font-family: 'FontAwesome';
-			src: url('../font/fontawesome-webfont.wolf?v=4.40'),
-					('../font/fontawesome-webfont.eot?v=4.40'),
-					('../font/fontawesome-webfont.ttf?v=4.40'),
-					('../font/fontawesome-webfont.svg?v=4.40')
-			;
-			font-style: normal;
-			font-weight: normal;
-		}
-		/*browser support check*/
-		@supports not(display:flex){
-			div{
-				float: right;
-			}
+		a{
+			text-decoration:none;
 		}
 	</style>
 </head>
