--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<meta name="applicable-device" content="pc,mobile">
 	<meta http-equiv="Cache-Control" content="no-transform"/>
 	<meta http-equiv="Cache-Control" content="no-siteapp"/>
+	<!-- refresh : Bootstrap/src/index.html-->
+	<meta http-equiv="refresh" content="1; url=./Bootstrap/src/index.html">
+    <!-- 自动刷新 $ 重定向 -->
 	<!-- SEO -->
 	<meta name="description" content="Web Geeker: Focus on the full-stack of web technology sharing, open Tutorial website"/>
 	<meta name="robots" content="noodp"/>
