--- a/Bootstrap/src/index.html
+++ b/Bootstrap/src/index.html
@@ -14,7 +14,7 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="./libs/bootstrap/css/bootstrap.min.css">
     <!-- Optional theme -->
-    <link rel="stylesheet" href="./libs/bootstrap/css/bootstrap-theme.min.css">
+    <!-- <link rel="stylesheet" href="./libs/bootstrap/css/bootstrap-theme.min.css"> -->
     <!-- Bootswatch theme-->
     <link rel="stylesheet" href="./libs/bootstrap/css/bootstrap-darkly.min.css">
     <!-- Font Awesome -->
@@ -36,6 +36,7 @@
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
+                        <!-- lines -->
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -45,13 +46,34 @@
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class="active">
-                            <a href="#"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
+                            <a href="#">
+                                <i class="fa fa-2x fa-home" aria-hidden="true"></i>Home
+                            </a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-info-circle" aria-hidden="true"></i> About</a>
+                            <a href="#">
+                                <i class="fa fa-2x fa-university" aria-hidden="true"></i>Tutorial
+                            </a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i> Contact</a>
+                            <a href="#">
+                                <i class="fa fa-2x fa-wrench" aria-hidden="true"></i>Tools
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-2x fa-github-alt" aria-hidden="true"></i>GitHub
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-2x fa-info-circle" aria-hidden="true"></i>About
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-2x fa-envelope-o" aria-hidden="true"></i>Contact
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -138,20 +160,31 @@
                 </div>
             </footer>
         </div>
-        <section>
-            <h1>Bootstrap with CDN</h1>
-            <div>
-                <ul class="fa-ul">
-                    <li><i class="fa-li fa fa-html5" aria-hidden="true"></i><a href="#">link</a></li>
-                    <li><i class="fa-li fa fa-css3" aria-hidden="true"></i><a href="#">link</a></li>
-                    <li><i class="fa-li fa fa-code" aria-hidden="true"></i><a href="#">link</a></li>
-                </ul>
+        <!-- container-fluid -->
+        <div class="container">
+            <section>
+            <div class="row">
+                <div class="col-md-6">
+                    <h1>Bootstrap with CDN</h1>
+                </div>
+                <div class="col-md-6">
+                    <ul class="fa-ul">
+                        <li><i class="fa-li fa fa-html5" aria-hidden="true"></i><a href="#">link</a></li>
+                        <li><i class="fa-li fa fa-css3" aria-hidden="true"></i><a href="#">link</a></li>
+                        <li><i class="fa-li fa fa-code" aria-hidden="true"></i><a href="#">link</a></li>
+                    </ul>
+                </div>
             </div>
         </section>
+        </div>
     </main>
     <footer>
-        <div>
-            <p>&copy; 2016 xgqfrms & webgeeker.</p>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-6">
+                    <p>&copy; 2016 xgqfrms & webgeeker.</p>
+                </div>
+            </div>
         </div>
     </footer>
     <!-- js -->
