--- a/Bootstrap/src/index.html
+++ b/Bootstrap/src/index.html
@@ -25,7 +25,7 @@
     <link rel="shortcut icon" href="./images/logo/logo.png" type="image/png">
     <!-- <link rel="shortcut icon" href="./images/logo/logo.png" type="image/x-icon"> -->
     <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="./css/offcanvas.css"">
+    <link rel="stylesheet" href="./css/offcanvas.css">
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link rel="stylesheet" href="./assets/ie10/ie10-viewport-bug-workaround.css">
 </head>
