--- a/Bootstrap/src/index.html
+++ b/Bootstrap/src/index.html
@@ -44,14 +44,14 @@
                     <a class="navbar-brand" href="#">WebGeeker</a>
                 </div>
                 <div id="navbar" class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
+                    <ul class="nav navbar-nav" id="nav-ul">
                         <li class="active">
                             <a href="#">
                                 <i class="fa fa-2x fa-home" aria-hidden="true"></i>Home
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="./Tutorial/index.html">
                                 <i class="fa fa-2x fa-university" aria-hidden="true"></i>Tutorial
                             </a>
                         </li>
