--- a/disqus.html
+++ b/disqus.html
@@ -9,7 +9,7 @@
         <h1>Disqus Universal Code install instructions</h1>
     </div>
     <div id="disqus_thread"></div>
-    <a href="http://webgeeker.xyz/index.html#disqus_thread">Link</a>
+    <a href="http://webgeeker.xyz/disqus.html#disqus_thread">Link</a>
     <a href="http://webgeeker.xyz/article1.html#disqus_thread">First article</a>
     <a href="http://webgeeker.xyz/article2.html#disqus_thread">Second article</a>
     <script>
@@ -23,9 +23,9 @@
         */
         
         var disqus_config = function () {
-            this.page.url = "http://webgeeker.xyz/index.html"; 
+            this.page.url = "http://webgeeker.xyz/disqus.html"; 
             // Replace PAGE_URL with your page's canonical URL variable
-            this.page.identifier = 001; 
+            this.page.identifier = "disqus"; 
             // Replace PAGE_IDENTIFIER with your page's unique identifier variable
         };
         
