--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<!--<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">-->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <!-- <title>webgeeker resume</title> -->
     <meta name="apple-mobile-web-app-title" content="Web Geeker">
     <meta name="applicable-device" content="pc,mobile">
     <meta http-equiv="Cache-Control" content="no-transform"/>
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
-    <!-- <meta name=description content="resume"> -->
     <!-- <meta http-equiv="refresh" content="1; url=./Bootstrap/src/index.html"> -->
     <!-- 自动刷新 $ 重定向 -->
     <!-- SEO meta -->
@@ -18,7 +16,6 @@
     <meta name=generator content="Sublime Text 3">
     <meta name="keywords" content="webgeeker,xgqfrms,xyz,github,free,web,site,www.webgeeker.xyz,">
     <meta name="description" content="webgeeker: Focus on the full-stack of web technology sharing, open Tutorial website! published on www.webgeeker.xyz"/>
-    <meta name="description" content="Web Geeker: Focus on the full-stack of web technology sharing, open Tutorial website"/>
     <meta name="robots" content="noodp"/>
     <meta property="og:locale" content="en_US"/>
     <meta property="og:type" content="website"/>
@@ -158,7 +155,7 @@
             <div class="skill-info section-info cf">
                 <div class="skill-left pull-left wow bounceIn">
                     <div class=skill-left-code>
-                        <img src=images/skill_code.png>
+                        <img src=images/skill_code.png alt="skill_code.png">
                     </div>
                     <p class="skill-left-text">
                         <span class=declor>Writing</span>high maintainability of the code, just like the make a work of art.
@@ -260,7 +257,7 @@
                 <ul class="item cf">
                     <li>
                         <div class="product-wrap wow lightSpeedIn">
-                            <img src=images/blogs.png>
+                            <img src=images/blogs.png alt="blogs.png">
                             <div class=product-des>
                                 <ul class="tag cf">
                                     <li class=tag-item>
@@ -278,7 +275,7 @@
                     </li>
                     <li>
                         <div class="product-wrap wow lightSpeedIn">
-                            <img src=images/dsqcw.png>
+                            <img src=images/dsqcw.png alt="dsqcw.png">
                             <div class=product-des>
                                 <ul class="tag cf">
                                     <li class=tag-item>
@@ -293,7 +290,7 @@
                     </li>
                     <li>
                         <div class="product-wrap wow lightSpeedIn">
-                            <img src=images/linux.png>
+                            <img src=images/linux.png alt="linux.png">
                             <div class=product-des>
                                 <ul class="tag cf">
                                     <li class=tag-item>
@@ -464,7 +461,7 @@
     <div id=my_profile style=display:none>
         <div class=profile-line-1></div>
         <div class=profile-avatar style=display:none>
-            <img src=./images/avatar.jpg>
+            <img src=./images/avatar.jpg alt="avatar.jp">
         </div>
         <div class=profile-text style=display:none>
             I think I an Artist of Programming!
