--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="apple-mobile-web-app-title" content="Web Geeker">
     <meta name="applicable-device" content="pc,mobile">
+    <meta http-equiv="default-style" content="">
+    <meta http-equiv="set-cookie" content="">
+    <meta http-equiv="Content-Security-Policy" content="">
+<!--
     <meta http-equiv="Cache-Control" content="no-transform"/>
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
-    <!-- <meta http-equiv="refresh" content="1; url=./Bootstrap/src/index.html"> -->
+-->
+    <meta http-equiv="refresh" content="37; url=./Bootstrap/src/index.html">
     <!-- 自动刷新 $ 重定向 -->
     <!-- SEO meta -->
     <meta name="author" content="xgqfrms, webgeeker">
