--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-title" content="Web Geeker">
     <meta name="applicable-device" content="pc,mobile">
     <meta http-equiv="default-style" content="">
-    <meta http-equiv="set-cookie" content="">
+<!--     <meta http-equiv="set-cookie" content=""> -->
     <meta http-equiv="Content-Security-Policy" content="">
 <!--
     <meta http-equiv="Cache-Control" content="no-transform"/>
