--- a/index.html
+++ b/index.html
@@ -562,6 +562,10 @@ var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') retu
 try { z1v1phzc19ujqzg = new WufooForm();z1v1phzc19ujqzg.initialize(options);z1v1phzc19ujqzg.display(); } catch (e) {}};
 var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
 })(document, 'script');</script>
+<!--  filestack    -->
+<script type="text/javascript" src="//api.filestackapi.com/filestack.js"></script>
 
+<input type="filepicker" data-fp-apikey="AFcwrT3qvREad1lGpKXXWz"
+onchange="alert(event.fpfile.url)">
 </body>
 </html>
