SEO: http://javascript.xgqfrms.xyz/
<span><a href=http://javascript.xgqfrms.xyz/ title="ES6 xgqfrms javascript webgeeker" target=blank>http://javascript.xgqfrms.xyz/</a></span>

--- a/index.html
+++ b/index.html
@@ -466,6 +466,7 @@
         </div>
         <div class=profile-text style=display:none>
             I think I an Artist of Programming!
+            <span><a href=http://javascript.xgqfrms.xyz/ title="ES6 xgqfrms javascript webgeeker" target=blank>http://javascript.xgqfrms.xyz/</a></span>
         </div>
         <div class=profile-smile style=display:none>
             <canvas width=200 height=50></canvas>
