--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Web Geeker: Focus on the full-stack of web technology sharing, open Tutorial website"/>
     <meta property="og:description" content="Web Geeker: Focus on the full-stack of web technology sharing, open Tutorial website"/>
-    <meta property="og:url" content="http://www.webgeeker.xyz/"/>
+    <meta property="og:url" content="https://www.webgeeker.xyz/"/>
     <meta property="og:site_name" content="webgeeker"/>
     <!-- twitter -->
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:description" content="Web Geeker: Focus on the full-stack of web technology sharing, open Tutorial website"/>
     <meta name="twitter:title" content="Web Geeker: Focus on the full-stack of web technology sharing, open Tutorial website"/>
     <meta name="twitter:site" content="@webgeeker"/>
-    <!-- Windows Start Screen tile for your site: http://www.buildmypinnedsite.com/ -->
+    <!-- Windows Start Screen tile for your site: https://www.buildmypinnedsite.com/ -->
     <meta name="application-name" content="webgeeker"/>
     <meta name="msapplication-square70x70logo" content="./images/win-tiles/small.jpg"/>
     <meta name="msapplication-square150x150logo" content="./images/win-tiles/medium.jpg"/>
     <meta name="msapplication-wide310x150logo" content="./images/win-tiles/wide.jpg"/>
     <meta name="msapplication-square310x310logo" content="./images/win-tiles/large.jpg"/>
     <meta name="msapplication-TileColor" content="#00ff00"/>
-    <meta name="msapplication-notification" content="frequency=30;polling-uri=http://notifications.buildmypinnedsite.com/?feed=http://www.webgeeker.xyz/rss.xml&amp;id=1;polling-uri2=http://notifications.buildmypinnedsite.com/?feed=http://www.webgeeker.xyz/rss.xml&amp;id=2;polling-uri3=http://notifications.buildmypinnedsite.com/?feed=http://www.webgeeker.xyz/rss.xml&amp;id=3;polling-uri4=http://notifications.buildmypinnedsite.com/?feed=http://www.webgeeker.xyz/rss.xml&amp;id=4;polling-uri5=http://notifications.buildmypinnedsite.com/?feed=http://www.webgeeker.xyz/rss.xml&amp;id=5; cycle=1"/>
+    <meta name="msapplication-notification" content="frequency=30;polling-uri=https://notifications.buildmypinnedsite.com/?feed=https://www.webgeeker.xyz/rss.xml&amp;id=1;polling-uri2=https://notifications.buildmypinnedsite.com/?feed=https://www.webgeeker.xyz/rss.xml&amp;id=2;polling-uri3=https://notifications.buildmypinnedsite.com/?feed=https://www.webgeeker.xyz/rss.xml&amp;id=3;polling-uri4=https://notifications.buildmypinnedsite.com/?feed=https://www.webgeeker.xyz/rss.xml&amp;id=4;polling-uri5=https://notifications.buildmypinnedsite.com/?feed=https://www.webgeeker.xyz/rss.xml&amp;id=5; cycle=1"/>
     <!-- 预呈现和预提取支持:https://msdn.microsoft.com/library/dn265039(v=vs.85).aspx -->
     <link rel="prerender" href="http://www.webgeeker.xyz/index.html" />
     <link rel="prefetch" href="http://www.webgeeker.xyz/css/style.css" />
@@ -61,7 +61,7 @@
     <link rel="stylesheet" href="./css/index.css" media="all and (min-width: 768px) and (max-width: 1920px) ">
     <!-- <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet"> -->
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/xgqfrms-GitHub/webgeeker/gh-pages/images/logo/logo.png" type="image/png">
-    <link rel="author" type="text/plain" href="http://www.webgeeker.xyz/humans.txt" />
+    <link rel="author" type="text/plain" href="https://www.webgeeker.xyz/humans.txt" />
     <title>Web Geeker: Focus on the full-stack of web technology sharing, open Tutorial website</title>
 </head>
 <body>
@@ -471,7 +471,7 @@
         </div>
         <div class=profile-text style=display:none>
             I think I an Artist of Programming!
-            <span><a href=http://javascript.xgqfrms.xyz/ title="ES6 xgqfrms javascript webgeeker" target=blank>http://javascript.xgqfrms.xyz/</a></span>
+            <span><a href=https://javascript.xgqfrms.xyz/ title="ES6 xgqfrms javascript webgeeker" target=blank>https://javascript.xgqfrms.xyz/</a></span>
         </div>
         <div class=profile-smile style=display:none>
             <canvas width=200 height=50></canvas>
