--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <!-- SEO meta -->
     <meta name="author" content="xgqfrms, webgeeker">
     <meta name=generator content="Sublime Text 3">
-    <meta name="keywords" content="webgeeker,xgqfrms,xyz,github,free,web,site,www.webgeeker.xyz,">
-    <meta name="description" content="webgeeker: Focus on the full-stack of web technology sharing, open Tutorial website! published on www.webgeeker.xyz"/>
+    <meta name="keywords" content="webgeeker,xgqfrms,xyz,github,free,web,site,www.webgeeker.xyz,This is a free website that goal is provides webgeekers with all kinds of web skills & do some great things ! ">
+    <meta name="description" content="webgeeker: Focus on the full-stack of web technology sharing, open Tutorial website! published on www.webgeeker.xyz, This is a free website that goal is provides webgeekers with all kinds of web skills & do some great things ! "/>
     <meta name="robots" content="noodp"/>
     <meta property="og:locale" content="en_US"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Web Geeker: Focus on the full-stack of web technology sharing, open Tutorial website"/>
-    <meta property="og:description" content="Web Geeker: Focus on the full-stack of web technology sharing, open Tutorial website"/>
+    <meta property="og:description" content="Web Geeker: Focus on the full-stack of web technology sharing, open Tutorial website, This is a free website that goal is provides webgeekers with all kinds of web skills & do some great things ! "/>
     <meta property="og:url" content="https://www.webgeeker.xyz/"/>
     <meta property="og:site_name" content="webgeeker"/>
     <!-- twitter -->
