2017-2050 copyYear & getfullyear.js

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
         <p class=footer-name>
             <span class="tada animated">xgqfrms</span>
         </p>
-        <p class=footer-date>&copy; 2016 xgqfrms</p>
+        <p class=footer-date><span id="spanYear"></span></p>
         <p class=footer-icon style=display:none>
             <a class=smoothscroll href=#my_profile>
                 <i class="fa fa-angle-double-down"></i>
@@ -771,8 +771,10 @@
         par.insertBefore(s, scr);
     })(document, 'script');
     </script>
+    <!-- copyYear & getfullyear.js    -->
+    <script type="text/javascript" src="https://cdn.xgqfrms.xyz/plugins/getfullyear.js"></script>
     <!--  filestack    -->
-    <script type="text/javascript" src="//api.filestackapi.com/filestack.js"></script>
+    <script type="text/javascript" src="https://api.filestackapi.com/filestack.js"></script>
     <input type="filepicker" data-fp-apikey="AFcwrT3qvREad1lGpKXXWz" onchange="alert(event.fpfile.url)">
 </body>
 
